tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/unshadowable-destructuring-binding.wyst
module demo
fn pair() -> (left: u64, right: u64) { return (1, 2) }
fn main() { var (widen, other) = pair() }
